salesforce-main/src/main/default/objects/Contact/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <description>Preferred first name of student; not automatically populated (e.g. often left blank) and therefore not suitable for email templates at this time (May 11,11).</description>
    <label>Preferred First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>