salesforce-main/src/main/default/objects/Contact/fields/Previous_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_First_Name__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>Previous First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>