salesforce-main/src/main/default/objects/Contact/fields/Previous_LPC__c.field-meta.xml
<CustomField>
    <fullName>Previous_LPC__c</fullName>
    <description>Indicates if the student was previously an LPC?</description>
    <label>Previous LPC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>