salesforce-main/src/main/default/objects/Contact/fields/Previous_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Middle_Name__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>Previous Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>