salesforce-main/src/main/default/objects/Contact/fields/Previous_Surname__c.field-meta.xml
<CustomField>
    <fullName>Previous_Surname__c</fullName>
    <description>Indicates the student&apos;s previous surname, if applicable.</description>
    <label>Previous Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>