salesforce-main/src/main/default/objects/Contact/fields/Previously_Applied_for_Visa__c.field-meta.xml
<CustomField>
    <fullName>Previously_Applied_for_Visa__c</fullName>
    <description>Has the student previously applied for a visa?</description>
    <label>Previously Applied for Visa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>