salesforce-main/src/main/default/objects/Contact/fields/Primary_Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delivery_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default delivery contact for company account</description>
    <label>Primary Delivery Contact</label>
    <type>Checkbox</type>
</CustomField>