salesforce-main/src/main/default/objects/Contact/fields/Primary_Disability_ESFA__c.field-meta.xml
<CustomField>
    <fullName>Primary_Disability_ESFA__c</fullName>
    <description>Created as per JIRA 2243</description>
    <label>Primary Disability (ESFA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10~ Moderate learning difficulty</fullName>
            </value>
            <value>
                <fullName>11~ Severe learning difficulty</fullName>
            </value>
            <value>
                <fullName>12~ Dyslexia</fullName>
            </value>
            <value>
                <fullName>13~ Dyscalculia</fullName>
            </value>
            <value>
                <fullName>14~ Autism spectrum disorder</fullName>
            </value>
            <value>
                <fullName>15~ Asperger&apos;s syndrome</fullName>
            </value>
            <value>
                <fullName>16~ Temporary disability after illness (for example post-viral) or accident</fullName>
            </value>
            <value>
                <fullName>17~ Speech, Language and Communication Needs</fullName>
            </value>
            <value>
                <fullName>4~ Visual impairment</fullName>
            </value>
            <value>
                <fullName>5~ Hearing impairment</fullName>
            </value>
            <value>
                <fullName>6~ Disability affecting mobility</fullName>
            </value>
            <value>
                <fullName>7~ Profound complex disabilities</fullName>
            </value>
            <value>
                <fullName>8~ Social and emotional difficulties</fullName>
            </value>
            <value>
                <fullName>9~ Mental health difficulty</fullName>
            </value>
            <value>
                <fullName>93~ Other physical disability</fullName>
            </value>
            <value>
                <fullName>94~ Other specific learning difficulty (e.g. Dyspraxia)</fullName>
            </value>
            <value>
                <fullName>95~ Other medical condition (for example epilepsy, asthma, diabetes)</fullName>
            </value>
            <value>
                <fullName>96~Other learning difficulty</fullName>
            </value>
            <value>
                <fullName>97~Other disability</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>