salesforce-main/src/main/default/objects/Contact/fields/Primary_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Primary_Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Nationality</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Students (Primary Nationality)</relationshipLabel>
    <relationshipName>Student_Nationality</relationshipName>
    <type>Lookup</type>
</CustomField>