salesforce-main/src/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Law~ Law</fullName>
            </value>
            <value>
                <fullName>LPD~ Management / Leadership &amp; Personal Development</fullName>
            </value>
            <value>
                <fullName>FaT~ Finance &amp; Tax</fullName>
            </value>
            <value>
                <fullName>FS~ Financial Services / City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>