salesforce-main/src/main/default/objects/Contact/fields/Programme2__c.field-meta.xml
<CustomField>
    <fullName>Programme2__c</fullName>
    <label>Programme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>