salesforce-main/src/main/default/objects/Contact/fields/Programme_Length__c.field-meta.xml
<CustomField>
    <fullName>Programme_Length__c</fullName>
    <label>Programme Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 months</fullName>
            </value>
            <value>
                <fullName>15-17 months</fullName>
            </value>
            <value>
                <fullName>16 months</fullName>
            </value>
            <value>
                <fullName>17 months</fullName>
            </value>
            <value>
                <fullName>18 months</fullName>
            </value>
            <value>
                <fullName>18-21 months</fullName>
            </value>
            <value>
                <fullName>20 months</fullName>
            </value>
            <value>
                <fullName>22 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>24-26 months</fullName>
            </value>
            <value>
                <fullName>24-30 months</fullName>
            </value>
            <value>
                <fullName>27 months</fullName>
            </value>
            <value>
                <fullName>30 months</fullName>
            </value>
            <value>
                <fullName>30-36 months</fullName>
            </value>
            <value>
                <fullName>31 months</fullName>
            </value>
            <value>
                <fullName>32 months</fullName>
            </value>
            <value>
                <fullName>33 months</fullName>
            </value>
            <value>
                <fullName>36 months</fullName>
            </value>
            <value>
                <fullName>37 months</fullName>
            </value>
            <value>
                <fullName>42 months</fullName>
            </value>
            <value>
                <fullName>48 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>