salesforce-main/src/main/default/objects/Contact/fields/PS_Profile_Services_ID__c.field-meta.xml
<CustomField>
    <fullName>PS_Profile_Services_ID__c</fullName>
    <description>Sourced from Profile Services for SIStoCRM Integration.</description>
    <externalId>true</externalId>
    <label>Profile Services ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>