salesforce-main/src/main/default/objects/Contact/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <description>NOT CURRENTLY IN USE OR DISPLAYED.  Indicates the highest level of qualification the student has achieved.</description>
    <label>[INACTIVE] Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>Masers Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>