salesforce-main/src/main/default/objects/Contact/fields/Qualification_Year__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Year__c</fullName>
    <label>Qualification Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>