salesforce-main/src/main/default/objects/Contact/fields/Receipt_issued__c.field-meta.xml
<CustomField>
    <fullName>Receipt_issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt issued</label>
    <type>Checkbox</type>
</CustomField>