salesforce-main/src/main/default/objects/Contact/fields/Receive_lead__c.field-meta.xml
<CustomField>
    <fullName>Receive_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive lead</label>
    <type>Checkbox</type>
</CustomField>