salesforce-main/src/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20~ No religion</fullName>
            </value>
            <value>
                <fullName>21~ Buddhist</fullName>
            </value>
            <value>
                <fullName>22~ Christian</fullName>
            </value>
            <value>
                <fullName>29~ Hindu</fullName>
            </value>
            <value>
                <fullName>30~ Jewish</fullName>
            </value>
            <value>
                <fullName>31~ Muslim</fullName>
            </value>
            <value>
                <fullName>33~ Sikh</fullName>
            </value>
            <value>
                <fullName>80~ Any other religion or belief</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>