salesforce-main/src/main/default/objects/Contact/fields/Remain_in_Country__c.field-meta.xml
<CustomField>
    <fullName>Remain_in_Country__c</fullName>
    <description>Does this student intend to stay in country after program completion?</description>
    <inlineHelpText>Does this student intend to stay in country after program completion?</inlineHelpText>
    <label>Remain in Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>