salesforce-main/src/main/default/objects/Contact/fields/Reporting_Required__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Required</label>
    <type>Checkbox</type>
</CustomField>