salesforce-main/src/main/default/objects/Contact/fields/Review_Process_Applications__c.field-meta.xml
<CustomField>
    <fullName>Review_Process_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review &amp; Process Applications</label>
    <type>Checkbox</type>
</CustomField>