salesforce-main/src/main/default/objects/Contact/fields/Secondary_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Nationality__c</fullName>
    <description>Secondary nationality of the student.</description>
    <label>Secondary Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>