salesforce-main/src/main/default/objects/Contact/fields/Send_PE_assessment_FU_meeting_reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_PE_assessment_FU_meeting_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PE assessment FU meeting reminder</label>
    <type>Checkbox</type>
</CustomField>