salesforce-main/src/main/default/objects/Contact/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12~ Heterosexual or straight</fullName>
            </value>
            <value>
                <fullName>11~ Gay or lesbian</fullName>
            </value>
            <value>
                <fullName>10~ Bisexual</fullName>
            </value>
            <value>
                <fullName>19~ Other sexual orientation</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>