salesforce-main/src/main/default/objects/Contact/fields/SFDC_Disability_Status_Code_Select__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Disability_Status_Code_Select__c</fullName>
    <description>Added for SIS Integration.</description>
    <label>Disability Status Code Select</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0~ No Known Disability</fullName>
            </value>
            <value>
                <fullName>8~ Two or More</fullName>
            </value>
            <value>
                <fullName>51~ Specific Learning Difficulty</fullName>
            </value>
            <value>
                <fullName>53~ Autistic Spectrum Condition</fullName>
            </value>
            <value>
                <fullName>54~ Illness/Health condition</fullName>
            </value>
            <value>
                <fullName>55~ Mental Health condition</fullName>
            </value>
            <value>
                <fullName>56~ Physical Impairment</fullName>
            </value>
            <value>
                <fullName>57~ Hearing Impairment</fullName>
            </value>
            <value>
                <fullName>58~ Visual Impairment</fullName>
            </value>
            <value>
                <fullName>96~ Not listed above</fullName>
            </value>
            <value>
                <fullName>99~ Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>