salesforce-main/src/main/default/objects/Contact/fields/SFDC_Disability_Type_Code_Select__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Disability_Type_Code_Select__c</fullName>
    <description>Master learning support / disability student account field. Used for HESA reporting</description>
    <label>Disability (HESA)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>95~ No known impairment, health condition or learning difference</fullName>
            </value>
            <value>
                <fullName>51~ Learning difference such as dyslexia, dyspraxia or AD(H)D</fullName>
            </value>
            <value>
                <fullName>53~ Social/communication conditions such as a speech and language impairment or an autistic spectrum condition</fullName>
            </value>
            <value>
                <fullName>54~ Long-term illness or health condition such as cancer, HIV, diabetes, chronic heart disease, or epilepsy</fullName>
            </value>
            <value>
                <fullName>55~ Mental health condition, challenge or disorder, such as depression, schizophrenia or anxiety</fullName>
            </value>
            <value>
                <fullName>56~ Physical impairment (a condition that substantially limits one or more basic physical activities such as walking, climbing stairs, lifting or carrying)</fullName>
            </value>
            <value>
                <fullName>57~ Deaf or have a hearing impairment</fullName>
            </value>
            <value>
                <fullName>58~ Blind or have a visual impairment uncorrected by glasses</fullName>
            </value>
            <value>
                <fullName>59~ Development condition that you have had since childhood which affects motor, cognitive, social and emotional skills, and speech and language</fullName>
            </value>
            <value>
                <fullName>96~ An impairment, health condition or learning difference not listed above</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
            <value>
                <fullName>99~ Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>