salesforce-main/src/main/default/objects/Contact/fields/SFDC_Ethnic_Code_Select__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Ethnic_Code_Select__c</fullName>
    <description>Added for SIS Integration.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100~ Asian - Bangladeshi or Bangladeshi British</fullName>
            </value>
            <value>
                <fullName>101~ Asian - Chinese or Chinese British</fullName>
            </value>
            <value>
                <fullName>103~ Asian - Indian or Indian British</fullName>
            </value>
            <value>
                <fullName>104~ Asian - Pakistani or Pakistani British</fullName>
            </value>
            <value>
                <fullName>119~ Any other Asian background</fullName>
            </value>
            <value>
                <fullName>120~ Black - African or African British</fullName>
            </value>
            <value>
                <fullName>121~ Black - Caribbean or Caribbean British</fullName>
            </value>
            <value>
                <fullName>139~ Any other Black background</fullName>
            </value>
            <value>
                <fullName>140~ Mixed or multiple ethnic groups - White or White British and Asian or Asian British</fullName>
            </value>
            <value>
                <fullName>141~ Mixed or multiple ethnic groups - White or White British and Black African or Black African British</fullName>
            </value>
            <value>
                <fullName>142~ Mixed or multiple ethnic groups - White or White British and Black Caribbean or Black Caribbean British</fullName>
            </value>
            <value>
                <fullName>159~ Any other Mixed or Multiple ethnic background</fullName>
            </value>
            <value>
                <fullName>160~ White - English, Scottish, Welsh, Northern Irish or British</fullName>
            </value>
            <value>
                <fullName>163~ White - Gypsy or Irish Traveller</fullName>
            </value>
            <value>
                <fullName>166~ White - Irish</fullName>
            </value>
            <value>
                <fullName>168~ White - Roma</fullName>
            </value>
            <value>
                <fullName>179~ Any other White background</fullName>
            </value>
            <value>
                <fullName>180~ Arab</fullName>
            </value>
            <value>
                <fullName>899~ Any other ethnic background</fullName>
            </value>
            <value>
                <fullName>997~ Not known</fullName>
            </value>
            <value>
                <fullName>998~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>