salesforce-main/src/main/default/objects/Contact/fields/SFDC_Select_Disability_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Select_Disability_Status_Code__c</fullName>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Known Disability</fullName>
            </value>
            <value>
                <fullName>Two or More</fullName>
            </value>
            <value>
                <fullName>Specific Learning Difficulty</fullName>
            </value>
            <value>
                <fullName>Autistic Spectrum Condition</fullName>
            </value>
            <value>
                <fullName>Illness/Health condition</fullName>
            </value>
            <value>
                <fullName>Mental Health condition</fullName>
            </value>
            <value>
                <fullName>Physical Impairment</fullName>
            </value>
            <value>
                <fullName>Hearing Impairment</fullName>
            </value>
            <value>
                <fullName>Visual Impairment</fullName>
            </value>
            <value>
                <fullName>Not listed above</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>