salesforce-main/src/main/default/objects/Contact/fields/SFDC_Select_Ethnic_Code__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Select_Ethnic_Code__c</fullName>
    <inlineHelpText>This field is only visible for the System Administrator profile.</inlineHelpText>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Irish Traveller</fullName>
            </value>
            <value>
                <fullName>Black/Black British-Caribbean</fullName>
            </value>
            <value>
                <fullName>Black/Black British-African</fullName>
            </value>
            <value>
                <fullName>Other Black background</fullName>
            </value>
            <value>
                <fullName>Asian/Asian British-Indian</fullName>
            </value>
            <value>
                <fullName>Asian/Asian British-Pakistani</fullName>
            </value>
            <value>
                <fullName>Asian/Asian Brit-Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Other Asian background</fullName>
            </value>
            <value>
                <fullName>Mixed-White &amp; Black Caribbean</fullName>
            </value>
            <value>
                <fullName>Mixed-White and Black African</fullName>
            </value>
            <value>
                <fullName>Mixed-White and Asian</fullName>
            </value>
            <value>
                <fullName>Other mixed background</fullName>
            </value>
            <value>
                <fullName>Other ethnic background</fullName>
            </value>
            <value>
                <fullName>I do not wish to declare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>