salesforce-main/src/main/default/objects/Contact/fields/SFDC_Student_Nationality__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Student_Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added for SIS Integrations.</description>
    <label>Student Nationality</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>